# nacre

./: Cargo.toml  README.md  book.toml  flake.nix  rust-toolchain.toml
.github/workflows/: pages.yml
bootstrap/: self.ncr
docs/: SUMMARY.md  cli.md  development-attribution.md  examples.md  index.md  language-reference.md  limitations.md  security-policy.md  self-compilation.md  syntax.md  testing-and-coverage.md  tutorial.md
docs/en/: book.toml
docs/en/src/: SUMMARY.md  cli.md  development-attribution.md  examples.md  index.md  language-reference.md  limitations.md  security-policy.md  syntax.md  testing-and-coverage.md  tutorial.md
docs/examples/: commands.ncr  control-flow.ncr  env-and-math.ncr  filesystem.ncr  functions.ncr  hello.ncr  japanese.ncr  pipeline.ncr  policy.toml  raw-block.ncr  redirect.ncr
docs/ja/: book.toml  nacre.css  nacre.js
docs/site/: index.html  styles.css
scripts/: build-docs.sh  check.sh  coverage.sh  verify-docs.mjs  verify-docs.sh  verify-search.mjs
src/: ast.rs  checker.rs  emitter.rs  error.rs  lib.rs  lowering.rs  main.rs  module_loader.rs  parser.rs  parser_peg.rs  policy.rs
src/checker/: names.rs  tests.rs  type_utils.rs  validation.rs
src/emitter/: arithmetic.rs  local_mangling.rs  match_analysis.rs  matching.rs  quoting.rs  runtime.rs  shell.rs  tests.rs  value_layout.rs
src/module_loader/: namespace.rs
std/: cli.ncr  fs.ncr  io.ncr  json.ncr  log.ncr  path.ncr  process.ncr  str.ncr  test.ncr
tests/: api.rs  cli.rs  language_surface.rs  security_policy.rs  transpile_fixtures.rs
theme/: nacre.css  nacre.js
(+12 files in other folders)
