[package]
name = "nacre"
version = "0.1.0"
edition = "2021"
description = "A tiny Rust implementation of the Nacre-to-Bash compiler."
license = "MIT"

[dependencies]
peg = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
